# Sandtrix

./: CMakeLists.txt  CMakePresets.json  README.md  app_icon.rc  resource.qrc
src/: gamewidget.cpp  gamewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  modewidget.h
styles/: style.qss
